src/views/on-board/DataVerification.module.scss
/**
 *
 * Copyright 2023-2024 InspectorRAGet Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 **/

@use '@carbon/react/scss/spacing' as *;
@use '@carbon/colors' as *;

.root {
  margin-top: $spacing-09;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  row-gap: $spacing-05;
  justify-content: flex-end;
}

.title {
  padding-top: $spacing-03;
  padding-bottom: $spacing-05;
}

.table {
  overflow-y: auto;

  td,
  tr {
    border-top: 1px solid var(--cds-layer);
    border-bottom: 1px solid var(--cds-border-subtle);
  }
}

.successMessageContainer {
  height: 25%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: $gray-70;
}

.disqualifiedTasksContainer {
  height: 70%;
  display: flex;
  flex-direction: column;
}

.navigationButtons {
  margin-top: auto;
  margin-bottom: $spacing-09;
  display: flex;
  column-gap: $spacing-05;
}

.visualizeButton {
  margin-top: auto;
  margin-bottom: $spacing-09;
}

.warningContainer {
  margin: $spacing-09 0;
  display: flex;
  column-gap: $spacing-04;
  justify-content: center;
  align-items: center;
}

.warningContainerIcon {
  color: $gray-40;
}

.warningContainerText {
  font-size: 20px;
  line-height: 24px;
  color: $gray-40;
}

